@@ -1,3 +1,9 @@
+2005-10-25  Ian McIntosh  <ian_mcintosh@linuxadvocate.org>
+
+	* src/map.c: Switch from gfreelist to g_new and g_free for the list of selected POI (currently not really used).
+	* src/gfreelist.h:
+	* src/gfreelist.c: Removed.
+
 2005-10-20  Ian McIntosh  <ian_mcintosh@linuxadvocate.org>
 
 	* roadster.spec: Added RPM .spec file contributed by Ofer Achler.
